--- a/catalogo.html
+++ b/catalogo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-AR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +35,7 @@
       <input type="text" id="search" placeholder="🔍 Buscar producto..." onkeyup="filtrarProductos()">
     </section>
 
-    
+
       <section class="seccion">
         <h2 class="hero-buttons">Golosinas y juguetes</h2>
         <div class="portfolio">
@@ -235,7 +235,7 @@
   </main>
 
 <footer>
- <p> Si tienes alguna pregunta, no dudes en contactarnos. ¡Estamos acá para ayudarte!</p>
+ <p> Si tienes alguna pregunta, no dudes en contactarnos.</p>
     <!-- Botones sociales -->
     <div class="social-buttons-wrapper">
       <div class="social-buttons">
