--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-AR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
   </aside>
   <div class="titulo-contenedor">
     <h1 class="titulo-animado">
-      Envíos a todo el país <span class="emoji">📦</span> - Golosinas Aries <span class="emoji">♈🔥</span>
+      Envíos a todo el país <span class="emoji">📦</span>  Golosinas Aries <span class="emoji">♈🔥</span>
     </h1>
     <nav>
       <a href="index.html">Inicio</a>
@@ -31,16 +31,10 @@
 
 
   <!-- Contacto -->
-  <main class="contacto">
-    <p class="hero-buttons"> Hacemos envíos a todo el país.</p>
-    <p class="hero-buttons"> Si tenés alguna pregunta, no dudes en contactarnos. ¡Estamos acá para ayudarte!</p>
-    <p class="hero-buttons"> </span>  Golosinas Aries <span class="emoji">♈🔥</span></p>
-  </main>
-
-  <!-- Footer con ubicación y volver arriba -->
-  <footer>
-
-    <!-- Botones sociales -->
+  <main>
+    <h2>Contacto</h2>
+      <p class="hero-buttons"> Podés contactarnos a través de:</p>
+      <!-- Botones sociales -->
     <div class="social-buttons-wrapper">
       <div class="social-buttons">
         <a href="https://mail.google.com/mail/?view=cm&to=golosinasaries@gmail.com" class="social-btn email">
@@ -57,6 +51,16 @@
         </a>
       </div>
     </div>
+   
+      <p class="hero-buttons"> Hacemos envíos a todo el país.</p>
+      <p class="hero-buttons"> Si tenés alguna pregunta, no dudes en contactarnos.</p>
+      <p class="hero-buttons"> </span>Golosinas Aries <span class="emoji">♈🔥</span></p>
+  </main>
+
+  
+  <footer>
+
+    
     
   </footer>
 
