--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </aside>
   <div class="titulo-contenedor">
     <h1 class="titulo-animado">
-      Envíos a todo el país <span class="emoji">📦</span>  Golosinas Aries <span class="emoji">♈🔥</span>
+    Envíos a todo el país - Golosinas Aries <span class="emoji">♈🔥</span>
     </h1>
     <nav>
       <a href="index.html">Inicio</a>
@@ -79,7 +79,7 @@
 
   <!-- Footer con botones de redes sociales -->
 <footer>
- <p> Si tienes alguna pregunta, no dudes en contactarnos. ¡Estamos acá para ayudarte!</p>
+ <p> Si tenés alguna pregunta, no dudes en contactarnos.</p>
     <!-- Botones sociales -->
     <div class="social-buttons-wrapper">
       <div class="social-buttons">
