--- a/catalogo.html
+++ b/catalogo.html
@@ -235,7 +235,7 @@
   </main>
 
 <footer>
- <p> Si tienes alguna pregunta, no dudes en contactarnos.</p>
+ <p> Si tenés alguna pregunta, no dudes en contactarnos.</p>
     <!-- Botones sociales -->
     <div class="social-buttons-wrapper">
       <div class="social-buttons">
