--- a/contacto.html
+++ b/contacto.html
@@ -32,7 +32,10 @@
 
   <!-- Contacto -->
   <main>
-    <h2>Contacto</h2>
+    <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
+      <div class="hero-overlay"></div>
+      <h2>Contacto</h2>
+    </aside>
       <p class="hero-buttons"> Podés contactarnos a través de:</p>
       <!-- Botones sociales -->
     <div class="social-buttons-wrapper">
@@ -61,7 +64,7 @@
   <footer>
 
     
-    
+
   </footer>
 
   <script src="js/script.js"></script>
