--- a/catalogo.html
+++ b/catalogo.html
@@ -50,7 +50,7 @@
           <div class="card">
             <img src="img/nutello.jpg" alt="Nutello" onclick="abrirModal(this)">
             <h3>Nutello</h3>
-            <p>$13.000,00 (x30)</p>
+            <p>$13.000 (x30)</p>
           </div>
 
           <div class="card">
@@ -71,10 +71,22 @@
             <p>$13.000 (x30)</p>
           </div>
 
+          <div class="card">
+            <img src="img/trompet.jpg" alt="Trompetas con chupetines" onclick="abrirModal(this)">
+            <h3>Trompetas con chupetines</h3>
+            <p>$17.000 (x60u)</p>
+          </div>
+
            <div class="card">
             <img src="img/burbujero.jpg" alt="Burbujero" onclick="abrirModal(this)">
             <h3>Burbujero</h3>
-            <p>$19.000,00 (x30)</p>
+            <p>$19.000 (x30)</p>
+
+          </div>
+            <div class="card">
+            <img src="img/alcancias.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
+            <h3>Alcancías con gelatinas</h3>
+            <p>$48.000 (x12u) / $90.000 (x24)</p>
           </div>
 
           <div class="card">
@@ -122,13 +134,13 @@
           <div class="card">
             <img src="img/ojoschicos.jpg" alt="Ojos CHICOS(variedad de diseños)" onclick="abrirModal(this)">
             <h3>Ojos chiquitos(variedad de diseños)(SIN STOCK)</h3>
-            <p>$17.000 (x200)</p>
+            <p>$17.000 (x200 unidades)</p>
           </div>
 
           <div class="card">
             <img src="img/brochetas.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
             <h3>Brochetas ojos</h3>
-            <p>$12.000 (x30)</p>
+            <p>$12.000 (x30 brochetas)</p>
           </div>
 
           <div class="card">
@@ -141,109 +153,97 @@
           <div class="card">
             <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
             <h3>Foot Lollipop</h3>
-            <p>$13.000 (x30)</p>
+            <p>$13.000 (x30u)</p>
           </div>
 
           <div class="card">
             <img src="img/ponyy.jpg" alt="Pony spray candy" onclick="abrirModal(this)">
             <h3>Pony spray candy</h3>
-            <p>$16.000 (x30)</p>
+            <p>$16.000 (x30u)</p>
           </div>
 
           <div class="card">
             <img src="img/psncho.jpg" alt="Gomitas pizza/pancho/coca" onclick="abrirModal(this)">
             <h3>Gomitas con forma</h3>
-            <p>$12.000 (x30)</p>
+            <p>$12.000 (x30u)</p>
           </div>
 
           <div class="card">
             <img src="img/chupetines.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
             <h3>Chupetines con formas</h3>
-            <p>$12.000,00 (x30)</p>
+            <p>$10.900 (x30)</p>
           </div>
 
           <div class="card">
             <img src="img/metroc.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
             <h3>Chicle x metro</h3>
-            <p>$12.000,00 (x30)</p>
+            <p>$12.000 (x30)</p>
           </div>
 
           <div class="card">
             <img src="img/corona.jpg" alt="Coronas LED" onclick="abrirModal(this)">
             <h3>Coronas LED</h3>
-            <p>$12.000,00 (x30)</p>
+            <p>$10.900 (x30u)</p>
           </div>
 
           <div class="card">
             <img src="img/tel.jpg" alt="Auto/camiseta/celular/spiderman + chicles" onclick="abrirModal(this)">
             <h3>Celu + chicles</h3>
-            <p>$14.000,00 (x30)</p>
-          </div>
-
-          <div class="card">
-            <img src="img/trompet.jpg" alt="Trompetas con chupetines" onclick="abrirModal(this)">
-            <h3>Trompetas con chupetines</h3>
-            <p>$17.000,00 (x60)</p>
+            <p>$12.900 (x30)</p>
           </div>
 
           <div class="card">
             <img src="img/popping.jpg" alt="Polvo ácido Popping candy" onclick="abrirModal(this)">
             <h3>Polvo ácido Popping Candy</h3>
-            <p>$12.000,00 (x30)</p>
+            <p>$12.000 (x30u)</p>
           </div>
 
           <div class="card">
             <img src="img/coolmint.jpg" alt="Cool Mint" onclick="abrirModal(this)">
-            <h3>Cool Mint (mentitas)</h3>
-            <p>$12.000,00 (x30)</p>
+            <h3>Cool Mint (mentitas) sabores frutales</h3>
+            <p>$12.000 (x30u)</p>
           </div>
 
           <div class="card">
             <img src="img/merliina.jpg" alt="Eyeball caramelo duro Merlina" onclick="abrirModal(this)">
             <h3>Eyeball caramelo duro Merlina</h3>
-            <p>$12.000,00 (x30)</p>
+            <p>$10.900 (x30u)</p>
           </div>
 
           <div class="card">
             <img src="img/monedas.jpg" alt="Monedas de chocolate" onclick="abrirModal(this)">
             <h3>Monedas de chocolate</h3>
-            <p>$17.000,00 (x200)</p>
+            <p>$17.000 (x250u)</p>
           </div>
 
           <div class="card">
             <img src="img/animalitos.jpg" alt="Gelatinas con forma de animales" onclick="abrirModal(this)">
             <h3>Gelatinas con forma de animales</h3>
-            <p>$4.000,00 (x12)</p>
-          </div>
-
-          <div class="card">
-            <img src="img/alcancias.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
-            <h3>Alcancías con gelatinas</h3>
-            <p>$48.000,00 (x12) / $90.000,00 (x24)</p>
+            <p>$4.000 (x12u)</p>
           </div>
 
           <div class="card">
             <img src="img/transformer.jpg" alt="Transformers" onclick="abrirModal(this)">
             <h3>Transformers</h3>
-            <p>$32.000,00 (x9)</p>
+            <p>$32.000 (x9)</p>
           </div>
 
           <div class="card">
             <img src="img/dispenser.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
             <h3>Dispenser con chicles</h3>
-            <p>$45.000,00 (x8)</p>
+            <p>$45.000 (x8u)</p>
           </div>
 
           <div class="card">
             <img src="img/sorpresa.jpg" alt="Huevos sorpresa" onclick="abrirModal(this)">
             <h3>Huevos sorpresa</h3>
-            <p>$14.000,00 (x30)</p>
+            <p>$12.900 (x30u)</p>
           </div>
 
           <div class="card">
             <img src="img/poke.jpg" alt="Bolas Pokémon con sorpresa y caramelo" onclick="abrirModal(this)">
             <h3>Bolas Pokémon con sorpresa y caramelo</h3>
-            <p>$14.000,00 (x30)</p>
+            <p>$12.900 (x30u)</p>
           </div>
 
           <div class="card">
