--- a/index.html
+++ b/index.html
@@ -43,31 +43,28 @@
       <div class="portfolio">
 
         <div class="card">
-          <img src="img/alcancias.jpg" alt="Alcancía divertida">
-          <h3>Alcancía rellena</h3>
-          <p>Perfecta para guardar tus monedas y comer ricas gomitas.</p>
+          <img src="img/trompet.jpg" alt="Trompetas  con chupetines">
+          <h3>Trompetas  con chupetines. $17.000 (x60u)</h3>
         <button onclick="window.location.href='catalogo.html'">Ver más</button>
         </div>
 
         <div class="card">
           <img src="img/burbujero.jpg" alt="Burbujero mágico">
-          <h3>Burbujero mágico</h3>
-          <p>Burbujero con diferentes formas.</p>
+          <h3>Burbujero mágico $19.000 (x30u)</h3>
           </a>
           <button onclick="window.location.href='catalogo.html'">Ver más</button>
         </div>
 
         <div class="card">
           <img src="img/nutello.jpg" alt="Nutello">
-          <h3>Nutello</h3>
-          <p>Snack dulce irresistible para grandes y chicos.</p>
+          <h3>Nutello $13.000 (x30u)</h3>
           </a>
           <button onclick="window.location.href='catalogo.html'">Ver más</button>
         </div>
 
         <div class="card">
-          <img src="img/gallinitas.jpg" alt="Nutello">
-          <h3>Gallinitas</h3>
+          <img src="img/merliina.jpg" alt="Chupetin Merlina">
+          <h3>Chupetín $10.900 (x30u)</h3>
           <button onclick="window.location.href='catalogo.html'">Ver más</button>
         </div>
 
