Resalte la flechita y agregué productos

--- a/catalogo.html
+++ b/catalogo.html
@@ -37,13 +37,43 @@
 
 
       <section class="seccion">
-        <h2 class="hero-buttons">Golosinas y juguetes</h2>
+        <h2>Golosinas Aries</h2>
         <div class="portfolio">
 
 
           <div class="card">
-            <img src="img/ojos.jpg" alt="Ojos(variedad de diseños)" onclick="abrirModal(this)">
-            <h3>Ojos(variedad de diseños)</h3>
+            <img src="img/ojos.jpg" alt="Ojos" onclick="abrirModal(this)">
+            <h3>Ojos</h3>
+            <p>$10.500 (x30)</p>
+          </div>
+
+          <div class="card">
+            <img src="img/ss.jpg" alt="Brains" onclick="abrirModal(this)">
+            <h3>Brains</h3>
+            <p>$10.500 (x30)</p>
+          </div>
+
+           <div class="card">
+            <img src="img/calabaza.jpg" alt="calabaza" onclick="abrirModal(this)">
+            <h3>Calabazas</h3>
+            <p>$10.500 (x30)</p>
+          </div>
+
+          <div class="card">
+            <img src="img/capibara.jpg" alt="Capibaras" onclick="abrirModal(this)">
+            <h3>Capibaras</h3>
+            <p>(x30)</p>
+          </div>
+
+          <div class="card">
+            <img src="img/donas.jpg" alt="Donas" onclick="abrirModal(this)">
+            <h3>Donas</h3>
+            <p>(x30)</p>
+          </div>
+
+           <div class="card">
+            <img src="img/frutilla.jpg" alt="Frutillas" onclick="abrirModal(this)">
+            <h3>Frutillas</h3>
             <p>$10.500 (x30)</p>
           </div>
 
@@ -57,6 +87,12 @@
             <img src="img/latas.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
             <h3>Latitas con chicles</h3>
             <p>$15.900 (x30)</p>
+          </div>
+
+           <div class="card">
+            <img src="img/LATAS.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
+            <h3>Latitas con chicles</h3>
+            <p>$14.900 (x30)</p>
           </div>
 
           <div class="card">
@@ -133,13 +169,13 @@
 
           <div class="card">
             <img src="img/ojoschicos.jpg" alt="Ojos CHICOS(variedad de diseños)" onclick="abrirModal(this)">
-            <h3>Ojos chiquitos(variedad de diseños)(SIN STOCK)</h3>
+            <h3>Ojos chiquitos</h3>
             <p>$17.000 (x200 unidades)</p>
           </div>
 
           <div class="card">
             <img src="img/brochetas.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
-            <h3>Brochetas ojos</h3>
+            <h3>Brochetas de ojos</h3>
             <p>$12.000 (x30 brochetas)</p>
           </div>
 
@@ -152,7 +188,7 @@
 
           <div class="card">
             <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
-            <h3>Foot Lollipop</h3>
+            <h3>Foot Lollipop, chupetín con polvo acido</h3>
             <p>$13.000 (x30u)</p>
           </div>
 
@@ -164,7 +200,7 @@
 
           <div class="card">
             <img src="img/psncho.jpg" alt="Gomitas pizza/pancho/coca" onclick="abrirModal(this)">
-            <h3>Gomitas con forma</h3>
+            <h3>Gomitas con forma de pancho</h3>
             <p>$12.000 (x30u)</p>
           </div>
 
@@ -172,12 +208,6 @@
             <img src="img/chupetines.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
             <h3>Chupetines con formas</h3>
             <p>$10.900 (x30)</p>
-          </div>
-
-          <div class="card">
-            <img src="img/metroc.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
-            <h3>Chicle x metro</h3>
-            <p>$12.000 (x30)</p>
           </div>
 
           <div class="card">
@@ -194,7 +224,7 @@
 
           <div class="card">
             <img src="img/popping.jpg" alt="Polvo ácido Popping candy" onclick="abrirModal(this)">
-            <h3>Polvo ácido Popping Candy</h3>
+            <h3>Polvo acido Popping Candy</h3>
             <p>$12.000 (x30u)</p>
           </div>
 
@@ -206,7 +236,7 @@
 
           <div class="card">
             <img src="img/merliina.jpg" alt="Eyeball caramelo duro Merlina" onclick="abrirModal(this)">
-            <h3>Eyeball caramelo duro Merlina</h3>
+            <h3>Chupetines Merlina</h3>
             <p>$10.900 (x30u)</p>
           </div>
 
