--- a/catalogo.html
+++ b/catalogo.html
@@ -37,7 +37,7 @@
 
 
       <section class="seccion">
-        <h2>Golosinas Aries</h2>
+        <h2>Catálogo</h2>
         <div class="portfolio">
 
 
