agrego productos al catálogo

--- a/catalogo.html
+++ b/catalogo.html
@@ -48,6 +48,24 @@
           </div>
 
           <div class="card">
+            <img src="img/seleccion.jpg" alt="Seleccion Argentina" onclick="abrirModal(this)">
+            <h3>Selección Argentina</h3>
+            <p>🇦🇷</p>
+          </div>
+
+          <div class="card">
+            <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
+            <h3>Fantasmita</h3>
+            <p>👻</p>
+          </div>
+
+          <div class="card">
+            <img src="img/fantasmitas.jpg" alt="Fantasmitas" onclick="abrirModal(this)">
+            <h3>Fantasmitas</h3>
+            <p>👻</p>
+          </div>
+
+          <div class="card">
             <img src="img/ss.jpg" alt="Brains" onclick="abrirModal(this)">
             <h3>Brains</h3>
             <p>$10.500 (x30)</p>
