--- a/catalogo.html
+++ b/catalogo.html
@@ -48,12 +48,6 @@
           </div>
 
           <div class="card">
-            <img src="img/seleccion.jpg" alt="Seleccion Argentina" onclick="abrirModal(this)">
-            <h3>Selección Argentina</h3>
-            <p>🇦🇷</p>
-          </div>
-
-          <div class="card">
             <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
             <h3>Fantasmita</h3>
             <p>👻</p>
@@ -81,6 +75,12 @@
             <img src="img/capibara.jpg" alt="Capibaras" onclick="abrirModal(this)">
             <h3>Capibaras</h3>
             <p>(x30)</p>
+          </div>
+
+          <div class="card">
+            <img src="img/seleccion.jpg" alt="Seleccion Argentina" onclick="abrirModal(this)">
+            <h3>Selección Argentina</h3>
+            <p>🇦🇷</p>
           </div>
 
           <div class="card">
@@ -304,6 +304,14 @@
         </div>
       </section>
     </section>
+
+    <div id="no-results" style="display:none; text-align:center; margin-top:1rem;">
+      <p>
+      No encontramos ese producto 😔  
+      <a href="https://wa.me/5492236010443?text=Hola!%20Busco%20un%20producto%20que%20no%20encuentro%20en%20la%20tienda" 
+      target="_blank">Envianos un WhatsApp 📲 y te lo conseguimos</a>
+      </p>
+    </div>
 
     <!-- Modal -->
     <div id="modal" class="modal">
