--- a/index.html
+++ b/index.html
@@ -42,31 +42,41 @@
       <h2>Productos en Promoción</h2>
       <div class="portfolio">
 
-        <div class="card">
-          <img src="img/trompet.jpg" alt="Trompetas  con chupetines">
-          <h3>Trompetas  con chupetines. $17.000 (x60u)</h3>
+      <div class="card">
+        <img src="img/burbujero.jpg" alt="Burbujero mágico" onclick="abrirModal(this)">
+        <h3>Burbujero $19.000 (x30u)</h3>
         <button onclick="window.location.href='catalogo.html'">Ver más</button>
-        </div>
+      </div>
 
-        <div class="card">
-          <img src="img/burbujero.jpg" alt="Burbujero mágico">
-          <h3>Burbujero mágico $19.000 (x30u)</h3>
-          </a>
+      <div class="card">
+        <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
+          <h3>Chupetín con polvo acido $13.000 (x30u)</h3>
           <button onclick="window.location.href='catalogo.html'">Ver más</button>
-        </div>
+      </div>
+      
+      <div class="card">
+        <img src="img/tel.jpg" alt="Auto/camiseta/celular/spiderman + chicles" onclick="abrirModal(this)">
+        <h3>Celu + chicles $12.900 (x30)</h3>
+        <button onclick="window.location.href='catalogo.html'">Ver más</button>
+      </div>
 
-        <div class="card">
-          <img src="img/nutello.jpg" alt="Nutello">
-          <h3>Nutello $13.000 (x30u)</h3>
-          </a>
-          <button onclick="window.location.href='catalogo.html'">Ver más</button>
-        </div>
+      <div class="card">
+        <img src="img/poke.jpg" alt="Bolas Pokémon con sorpresa y caramelo" onclick="abrirModal(this)">
+        <h3>Bolas Pokémon con sorpresa y caramelo</h3>
+        <button onclick="window.location.href='catalogo.html'">Ver más</button>
+      </div>
 
-        <div class="card">
-          <img src="img/merliina.jpg" alt="Chupetin Merlina">
-          <h3>Chupetín $10.900 (x30u)</h3>
-          <button onclick="window.location.href='catalogo.html'">Ver más</button>
-        </div>
+      <div class="card">
+        <img src="img/nutello.jpg" alt="Nutello" onclick="abrirModal(this)">
+        <h3>Nutello $13.000 (x30u)</h3>
+        <button onclick="window.location.href='catalogo.html'">Ver más</button>
+      </div>
+
+      <div class="card">
+        <img src="img/merliina.jpg" alt="Chupetin Merlina" onclick="abrirModal(this)">
+        <h3>Chupetín $10.900 (x30u)</h3>
+        <button onclick="window.location.href='catalogo.html'">Ver más</button>
+      </div>
 
       </div>
     </section>
