--- a/catalogo.html
+++ b/catalogo.html
@@ -48,24 +48,27 @@
           </div>
 
           <div class="card">
-            <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
-            <h3>Fantasmita</h3>
-            <p>👻</p>
-          </div>
-
-          <div class="card">
-            <img src="img/fantasmitas.jpg" alt="Fantasmitas" onclick="abrirModal(this)">
-            <h3>Fantasmitas</h3>
-            <p>👻</p>
-          </div>
-
-          <div class="card">
             <img src="img/ss.jpg" alt="Brains" onclick="abrirModal(this)">
             <h3>Brains</h3>
             <p>$10.500 (x30)</p>
           </div>
 
-           <div class="card">
+          <div class="card">
+            <img src="img/chupetinBrain.jpg" alt= "Chupetín Brain" onclick="abrirModal(this)">
+            <h3>Chupetín Brain</h3>
+          </div>
+
+          <div class="card">
+              <img src="img/chupetinConAcido.jpg" alt="Chupetín con polvo ácido" onclick="abrirModal(this)">
+              <h3>Chupetín con polvo ácido</h3>
+          </div>
+
+          <div class="card">
+              <img src="img/cajaCalabaza.jpg" alt="Chupetin calabaza" onclick="abrirModal(this)">
+              <h3>Chupetín Calabaza</h3>
+          </div>
+
+          <div class="card">
             <img src="img/calabaza.jpg" alt="calabaza" onclick="abrirModal(this)">
             <h3>Calabazas</h3>
             <p>$10.500 (x30)</p>
@@ -81,6 +84,18 @@
             <img src="img/seleccion.jpg" alt="Seleccion Argentina" onclick="abrirModal(this)">
             <h3>Selección Argentina</h3>
             <p>🇦🇷</p>
+          </div>
+
+          <div class="card">
+            <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
+            <h3>Fantasmita</h3>
+            <p>👻</p>
+          </div>
+
+          <div class="card">
+            <img src="img/fantasmitas.jpg" alt="Fantasmitas" onclick="abrirModal(this)">
+            <h3>Fantasmitas</h3>
+            <p>👻</p>
           </div>
 
           <div class="card">
