--- a/catalogo.html
+++ b/catalogo.html
@@ -32,7 +32,7 @@
   <main>
 
     <section class="buscador">
-      <input type="text" id="search" placeholder="🔍 Buscar producto..." onkeyup="filtrarProductos()">
+      <input type="text" id="search" placeholder="🔍 Buscar producto...">
     </section>
 
 
@@ -201,100 +201,83 @@
           </div>
 
           <div class="card">
-            <img src="img/ojoschicos.jpg" alt="Ojos CHICOS(variedad de diseños)" onclick="abrirModal(this)">
-            <h3>Ojos chiquitos</h3>
-            <p>$17.000 (x200 unidades)</p>
+            <img src="img/ojoschicos.jpg" alt="Ojos CHICOS" onclick="abrirModal(this)">
+            <h3>Ojos chiquitos $17.000 (x200 unidades)</h3>
           </div>
 
           <div class="card">
             <img src="img/brochetas.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
-            <h3>Brochetas de ojos</h3>
-            <p>$12.000 (x30 brochetas)</p>
+            <h3>Brochetas de ojos $12.000 (x30 brochetas)</h3>
           </div>
 
           <div class="card">
             <img src="img/smack_bar.jpg" alt="Smack bar." onclick="abrirModal(this)">
-            <h3>Smack bar</h3>
-            <p>$6.500(12 unidades)</p>
+            <h3>Smack bar $6.500(12 unidades)</h3>
           </div>
-
 
           <div class="card">
             <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
-            <h3>Foot Lollipop, chupetín con polvo acido</h3>
-            <p>$13.000 (x30u)</p>
+            <h3>Chupetín con polvo acido $13.000 (x30u)</h3>
           </div>
 
           <div class="card">
             <img src="img/ponyy.jpg" alt="Pony spray candy" onclick="abrirModal(this)">
-            <h3>Pony spray candy</h3>
-            <p>$16.000 (x30u)</p>
+            <h3>Pony spray candy $16.000 (x30u)</h3>
           </div>
 
           <div class="card">
             <img src="img/psncho.jpg" alt="Gomitas pizza/pancho/coca" onclick="abrirModal(this)">
-            <h3>Gomitas con forma de pancho</h3>
-            <p>$12.000 (x30u)</p>
+            <h3>Gomitas con forma de pancho $12.000 (x30u)</h3>
           </div>
 
           <div class="card">
             <img src="img/chupetines.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
-            <h3>Chupetines con formas</h3>
-            <p>$10.900 (x30)</p>
+            <h3>Chupetines con formas $10.900 (x30)</h3>
           </div>
 
           <div class="card">
             <img src="img/corona.jpg" alt="Coronas LED" onclick="abrirModal(this)">
-            <h3>Coronas LED</h3>
-            <p>$10.900 (x30u)</p>
+            <h3>Coronas LED $10.900 (x30u)</h3>
           </div>
 
           <div class="card">
             <img src="img/tel.jpg" alt="Auto/camiseta/celular/spiderman + chicles" onclick="abrirModal(this)">
-            <h3>Celu + chicles</h3>
-            <p>$12.900 (x30)</p>
+            <h3>Celu + chicles $12.900 (x30)</h3>
           </div>
 
           <div class="card">
             <img src="img/popping.jpg" alt="Polvo ácido Popping candy" onclick="abrirModal(this)">
-            <h3>Polvo acido Popping Candy</h3>
-            <p>$12.000 (x30u)</p>
+            <h3>Polvo acido $12.000 (x30u)</h3>
           </div>
 
           <div class="card">
             <img src="img/coolmint.jpg" alt="Cool Mint" onclick="abrirModal(this)">
-            <h3>Cool Mint (mentitas) sabores frutales</h3>
-            <p>$12.000 (x30u)</p>
+            <h3>Cool Mint sabores frutales $12.000 (x30u)</h3>
           </div>
 
           <div class="card">
             <img src="img/merliina.jpg" alt="Eyeball caramelo duro Merlina" onclick="abrirModal(this)">
-            <h3>Chupetines Merlina</h3>
-            <p>$10.900 (x30u)</p>
+            <h3>Chupetines Merlina $10.900 (x30u)</h3>
           </div>
 
           <div class="card">
             <img src="img/monedas.jpg" alt="Monedas de chocolate" onclick="abrirModal(this)">
-            <h3>Monedas de chocolate</h3>
-            <p>$17.000 (x250u)</p>
+            <h3>Monedas de chocolate $17.000 (x250u)</h3>
           </div>
 
           <div class="card">
             <img src="img/animalitos.jpg" alt="Gelatinas con forma de animales" onclick="abrirModal(this)">
-            <h3>Gelatinas con forma de animales</h3>
-            <p>$4.000 (x12u)</p>
+            <h3>Gelatinas $4.000 (x12u)</h3>
           </div>
 
           <div class="card">
             <img src="img/transformer.jpg" alt="Transformers" onclick="abrirModal(this)">
-            <h3>Transformers</h3>
-            <p>$32.000 (x9)</p>
+            <h3>Transformers $32.000 (x9)</h3>
           </div>
 
           <div class="card">
             <img src="img/dispenser.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
-            <h3>Dispenser con chicles</h3>
-            <p>$45.000 (x8u)</p>
+            <h3>Dispenser con chicles $45.000 (x8u)</h3>
           </div>
 
           <div class="card">
@@ -318,7 +301,7 @@
           </div>
         </div>
       </section>
-    </section>
+      </section>
 
     <div id="no-results" style="display:none; text-align:center; margin-top:1rem;">
       <p>
