--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <p>Golosinas, juguetes y combos personalizados.</p>
   </aside>
 
-
   <main>
    <!-- Productos Destacados -->
     <section class="destacados">
@@ -81,7 +80,10 @@
       </div>
     </section>
 
-  
+    <aside class="buscador">
+      <input type="text" id="search" placeholder="🔍 Buscar producto...">
+      <div id="no-results" style="display:none; margin-top: 1rem; color: red;"></div>
+    </aside>
   </main>
 
   <!-- Footer con botones de redes sociales -->
